# dynfn

./: Cargo.toml  LICENSE  README.md
dynfn-core/: Cargo.toml
dynfn-core/src/: callable.rs  data_extraction.rs  data_structure.rs  dynamic_function.rs  function_call.rs  impl_assertions.rs  lib.rs
dynfn-core/src/types/: data_extraction.rs  data_structure.rs  function.rs  function_call.rs  impl_assertions.rs  mod.rs
dynfn-proc-macros/: Cargo.toml
dynfn-proc-macros/src/: lib.rs
src/: lib.rs  prelude.rs
